# tdd_vending-machine

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  TODO_step0.md  main.py  pyproject.toml
docs/: TODO_step0.md  TODO_step1.md  TODO_step2.md  TODO_step3.md  TODO_step4.md
src/vending_machine/: juice.py  juice_supplier.py  money.py  request.py  response.py  vending_machine.py
tests/vending_machine/: test_money.py  test_vending_machine.py
