[tool.poetry]
name = "tdd_vending-machine"
version = "0.1.0"
description = ""
authors = ["Koya Kamiya <koya_kamiya@albert2005.co.jp>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.2.0"
isort = "^5.8.0"
pytest-cov = "^2.11.1"
ipykernel = "^5.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
