[tool.poetry]
name = "tdd_vending-machine"
version = "0.1.0"
description = ""
authors = ["Koya Kamiya <koya_kamiya@albert2005.co.jp>"]
packages = [
    { include = "vending_machine", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
flake8 = "^3.9.0"
black = "^20.8b1"
flake8-docstrings = "^1.6.0"
flake8-quotes = "^3.2.0"
isort = "^5.8.0"
pytest-cov = "^2.11.1"
ipykernel = "^5.5.3"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true